--- a/index.html
+++ b/index.html
@@ -88,37 +88,36 @@
                     <h3 class="section-title">About</h3>
                     <div class="section-title-border"></div>
                 </div>
-                <div class="container">
-                    <div class="row text-left align-items-center">
-                        <div class="col-xs-12 col-lg-4">
-                            <img class="w-100" src="images/about.jpg" alt="">
-                        </div>
-                        <div class="col-xs-12 col-lg-8">
-                            <p><strong>Hello there!</strong> 
-                                I'm Johnny and I tend to find myself in interesting situations. 
-                                I love going on adventures and creating stories. 
-                                Here's a little about me:</p>
-                            <p>
-                                <strong>Capabilities:</strong>
-                                <br>- Eat countless packets of Mi Goreng instant noodles
-                                <br>- Speak broken Mandarin and Fuzhouneze to my family
-                                <br>- Speedrun any task with Mario Kart Star Music 10 Hrs
-                            </p>
-                            <p>
-                                <strong>Accomplishments:</strong>
-                                <br>- Survived two separate graduations in pouring rain
-                                <br>- Crowned the Four Square King in elementary school
-                                <br>- Witnessed Cap lift Mjolnir in a movie theater
-                            </p>
-                            <p>
-                                <strong>Misdemeanors:</strong>
-                                <br>- Says "Close" the light instead of "Turn off" the light
-                                <br>- Doesn't know one single fact about bears attacks
-                                <br>- Enjoys chewing bubble gum but can't blow bubbles
-                                <br>- Has a confusing one-word, all-lowercase WiFi password
-                            </p>
-                        </div>
-                    </div>
+            </div>
+            <div class="row text-left align-items-stretch">
+                <div class="col-xs-12 col-lg-4">
+                    <img class="w-100" src="images/about.jpg" alt="">
+                </div>
+                <div class="col-xs-12 col-lg-8">
+                    <p><strong>Hello there!</strong> 
+                        I'm Johnny and I tend to find myself in interesting situations. 
+                        I love going on adventures and creating stories. 
+                        Here's a little about me:
+                    </p>
+                    <p>
+                        <strong>Capabilities:</strong>
+                        <br>- Eat countless packets of Mi Goreng instant noodles
+                        <br>- Speak broken Mandarin and Fuzhouneze to my family
+                        <br>- Speedrun any task with Mario Kart Star Music 10 Hrs
+                    </p>
+                    <p>
+                        <strong>Accomplishments:</strong>
+                        <br>- Survived two separate graduations in pouring rain
+                        <br>- Crowned the Four Square King in elementary school
+                        <br>- Witnessed Cap lift Mjolnir in a movie theater
+                    </p>
+                    <p>
+                        <strong>Misdemeanors:</strong>
+                        <br>- Says "Close" the light instead of "Turn off" the light
+                        <br>- Doesn't know one single fact about bears attacks
+                        <br>- Enjoys chewing bubble gum but can't blow bubbles
+                        <br>- Has a confusing one-word, all-lowercase WiFi password
+                    </p>
                 </div>
             </div>
         </div>
@@ -173,7 +172,6 @@
             </div>
         </div>
     </section>
-    
 
     <!--Exprience Section-->
     <section class="white">
@@ -186,7 +184,9 @@
                     <p>I've gained experience within established corporations 
                         and led multiple teams on various academic projects. 
                         These opportunities have given me a well-rounded perspective 
-                        on addressing complex problems using data-driven techniques.</p>
+                        on addressing complex problems using data-driven techniques.
+                    </p>
+                    <br>
                 </div>
             </div>
             <!--New Garden: Assistant (to the) Manager-->
@@ -208,67 +208,62 @@
                         with a focus on creating solutions that make a tangible impact.
                         I'm always working on a new project - stay tuned for more!
                     </p>
+                    <br>
                 </div>
             </div>
-            <div class="container">
-                <div class="row text-left align-items-center">
-                    <div class="col-xs-12 col-lg-6">
-                        <img class="img-fluid" src="images/newgarden.jpg" alt="">
-                    </div>
-                    <div class="col-xs-12 col-lg-6">
-                        <div class="project-title">New Garden</div>
-                        <div class="project-desc">Restaurant Point of Sale System</div>
-                        <p>
-                            Created a Java Swing GUI, Point of Sale system that allows 
-                            self-service for food ordering during the pandemic. 
-                            It deploys PostgreSQL to store every menu item and dynamically
-                            retrieves the correct items based on the selected category.
-                            It also counts the frequency of each item so restocking is easier.
-                        </p>
-                        <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/NewGarden','_blank')">GitHub</button>
-                    </div>
+            <div class="row text-left align-items-stretch">
+                <div class="col-xs-12 col-lg-6">
+                    <img class="img-fluid h-100" src="images/newgarden.jpg" alt="">
                 </div>
-            </div>
-            <br>
-            <br>
-            <div class="container">
-                <div class="row text-left align-items-center">
-                    <div class="col-xs-12 col-lg-6">
-                        <img class="img-fluid" src="images/lootcouncil.jpg" alt="">
-                    </div>
-                    <div class="col-xs-12 col-lg-6">
-                        <div class="project-title">Loot Council</div>
-                        <div class="project-desc">Web Scraper & Reward Allocator</div>
-                        <p>
-                            Developed a Python script to construct reward assignments for 
-                            World of Warcraft guilds. It utilizes web scraping techniques 
-                            and GraphQL to extract data to be used in the criterion. 
-                            Environment variables are used to safeguard API keys.
-                            GitHub Actions will automatically run the script once a week.
-                        </p>
-                        <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub</button>
-                    </div>
+                <div class="col-xs-12 col-lg-6">
+                    <div class="project-title">New Garden</div>
+                    <div class="project-desc">Restaurant Point of Sale System</div>
+                    <p>
+                        Created a Java Swing GUI, Point of Sale system that allows 
+                        self-service for food ordering during the pandemic. 
+                        It deploys PostgreSQL to store every menu item and dynamically
+                        retrieves the correct items based on the selected category.
+                        It also counts the frequency of each item so restocking is easier.
+                    </p>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/NewGarden','_blank')">GitHub</button>
                 </div>
             </div>
             <br>
             <br>
-            <div class="container">
-                <div class="row text-left align-items-center">
-                    <div class="col-xs-12 col-lg-6">
-                        <img class="img-fluid" src="images/romantichut.jpg" alt="">
-                    </div>
-                    <div class="col-xs-12 col-lg-6">
-                        <div class="project-title">Romantic Hut</div>
-                        <div class="project-desc">Local Business Website</div>
-                        <p>
-                            Designed a Bootstrap website to showcase the services of a party hall.
-                            By filling out the embedded Google Form, you can receive an 
-                            immediate response on the venue's availability via Twilio. 
-                            When submitted, Apps Script will look for schedule conflicts in 
-                            the Google Sheet that hold all the reservations.
-                        </p>
-                        <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub</button>
-                    </div>
+            <div class="row text-left align-items-stretch">
+                <div class="col-xs-12 col-lg-6">
+                    <img class="img-fluid h-100" src="images/lootcouncil.jpg" alt="">
+                </div>
+                <div class="col-xs-12 col-lg-6">
+                    <div class="project-title">Loot Council</div>
+                    <div class="project-desc">Web Scraper & Reward Allocator</div>
+                    <p>
+                        Developed a Python script to construct reward assignments for 
+                        World of Warcraft guilds. It utilizes web scraping techniques 
+                        and GraphQL to extract data to be used in the criterion. 
+                        Environment variables are used to safeguard API keys.
+                        GitHub Actions will automatically run the script once a week.
+                    </p>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub</button>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="row text-left align-items-stretch">
+                <div class="col-xs-12 col-lg-6">
+                    <img class="img-fluid h-100" src="images/romantichut.jpg" alt="">
+                </div>
+                <div class="col-xs-12 col-lg-6">
+                    <div class="project-title">Romantic Hut</div>
+                    <div class="project-desc">Local Business Website</div>
+                    <p>
+                        Designed a Bootstrap website to showcase the services of a party hall.
+                        By filling out the embedded Google Form, you can receive an 
+                        immediate response on the venue's availability via Twilio. 
+                        When submitted, Apps Script will look for schedule conflicts in 
+                        the Google Sheet that hold all the reservations.
+                    </p>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub</button>
                 </div>
             </div>
         </div>
