experience timeline template

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
             </div>
             <div class="row text-center align-items-center">
                 <div class="col social-icons">
-                    <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" project-title="LinkedIn Profile" class="icon-button linkedin">
+                    <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" proj-title="LinkedIn Profile" class="icon-button linkedin">
                         <i class="icon-linkedin fa fa-linkedin"></i>
                         <span></span>
                     </a>
-                    <a href="https://github.com/johnnyj2608" target="_blank" project-title="GitHub Profile" class="icon-button github">
+                    <a href="https://github.com/johnnyj2608" target="_blank" proj-title="GitHub Profile" class="icon-button github">
                         <i class="icon-github fa fa-github"></i>
                         <span></span>
                     </a>
@@ -80,7 +80,7 @@
     </section>
     
     <!--About Section-->
-    <section class="white">
+    <section class="grey">
         <div id="about" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
@@ -89,11 +89,11 @@
                     <div class="section-title-border"></div>
                 </div>
             </div>
-            <div class="row text-left align-items-stretch">
-                <div class="col-xs-12 col-lg-4">
+            <div class="row text-left align-items-center">
+                <div class="col-xs-12 col-lg-6">
                     <img class="w-100" src="images/about.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-8">
+                <div class="col-xs-12 col-lg-6">
                     <p><strong>Hello there!</strong> 
                         I'm Johnny and I tend to find myself in interesting situations. 
                         I love going on adventures and creating stories. 
@@ -124,7 +124,7 @@
     </section>
 
     <!--Interests Section-->
-    <section class="grey">
+    <section class="white">
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
@@ -174,7 +174,7 @@
     </section>
 
     <!--Exprience Section-->
-    <section class="white">
+    <section class="grey">
         <div id="experience" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
@@ -189,12 +189,57 @@
                     <br>
                 </div>
             </div>
+            <div class="row text-left align-items-center">
+                <div class="col">
+                    <ul class="exp-timeline">
+                        <li>
+                            <h3 class="exp-heading">
+                                <i class="fas fa-briefcase"></i> 
+                                Work Experience
+                            </h3>
+                        </li>
+                        <!--An Kang-->
+                        <li>
+                            <time class="exp-date"><span><b>May '22 - Present</b></span></time>
+                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <div class="exp-card">
+                                <h4><strong>An Kang Social Day Care</strong> | <em>Computer Technician</em></h4>
+                                <p>Sample Text</p>
+                                <br>
+                                <img class="experience_photo" src="assets/img/experience/sap.jpg" alt=""> 
+                            </div>
+                        </li>
+                        <!--Siemens-->
+                        <li>
+                            <time class="exp-date"><span><b>May '21 - Aug '21</b></span></time>
+                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <div class="exp-card">
+                                <h4><strong>Siemens Digital Industries Software</strong> | <em>Software Engineer</em></h4>
+                                <p>Sample Text</p>
+                                <br>
+                                <img class="experience_photo" src="assets/img/experience/sap.jpg" alt=""> 
+                            </div>
+                        </li>
+                        <!--New Garden-->
+                        <li>
+                            <time class="exp-date"><span><b>Jun '18 - May '21</b></span></time>
+                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <div class="exp-card">
+                                <h4><strong>New Garden Chinese Restaurant</strong> | <em>Assistant (to the) Manager</em></h4>
+                                <p>Sample Text</p>
+                                <br>
+                                <img class="experience_photo" src="assets/img/experience/sap.jpg" alt=""> 
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <!--New Garden: Assistant (to the) Manager-->
         </div>
     </section>
 
     <!--Projects Section-->
-    <section class="grey">
+    <section class="white">
         <div id="projects" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
@@ -211,13 +256,14 @@
                     <br>
                 </div>
             </div>
+            <!--New Garden-->
             <div class="row text-left align-items-stretch">
                 <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid h-100" src="images/newgarden.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="project-title">New Garden</div>
-                    <div class="project-desc">Restaurant Point of Sale System</div>
+                    <div class="proj-title">New Garden</div>
+                    <div class="proj-desc">Restaurant Point of Sale System</div>
                     <p>
                         Created a Java Swing GUI, Point of Sale system that allows 
                         self-service for food ordering during the pandemic. 
@@ -230,13 +276,14 @@
             </div>
             <br>
             <br>
+            <!--Loot Council-->
             <div class="row text-left align-items-stretch">
                 <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid h-100" src="images/lootcouncil.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="project-title">Loot Council</div>
-                    <div class="project-desc">Web Scraper & Reward Allocator</div>
+                    <div class="proj-title">Loot Council</div>
+                    <div class="proj-desc">Web Scraper & Reward Allocator</div>
                     <p>
                         Developed a Python script to construct reward assignments for 
                         World of Warcraft guilds. It utilizes web scraping techniques 
@@ -249,13 +296,14 @@
             </div>
             <br>
             <br>
+            <!--Romantic Hut-->
             <div class="row text-left align-items-stretch">
                 <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid h-100" src="images/romantichut.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="project-title">Romantic Hut</div>
-                    <div class="project-desc">Local Business Website</div>
+                    <div class="proj-title">Romantic Hut</div>
+                    <div class="proj-desc">Local Business Website</div>
                     <p>
                         Designed a Bootstrap website to showcase the services of a party hall.
                         By filling out the embedded Google Form, you can receive an 
@@ -270,7 +318,7 @@
     </section>
 
     <!--Contact Section-->
-    <section class="white">
+    <section class="grey">
         <div id="contact" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
@@ -297,7 +345,7 @@
         <div class="container align-items-center justify-content-center">
           <div class="row text-center">
             <div class="col">
-              <h5>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</h5>
+              <h6>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</h6>
             </div>
           </div>
         </div>
