--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="w-100" src="images/about.jpg" alt="">
+                    <img class="w-100 image" src="images/about.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
                     <p><strong>Hello there!</strong> 
@@ -186,7 +186,6 @@
                         These opportunities have given me a well-rounded perspective 
                         on addressing complex problems using data-driven techniques.
                     </p>
-                    <br>
                 </div>
             </div>
             <div class="row text-left align-items-center">
@@ -204,9 +203,10 @@
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
                             <div class="exp-card">
                                 <h4><strong>An Kang Social Day Care</strong> | <em>Computer Technician</em></h4>
-                                <p>Sample Text</p>
-                                <br>
-                                <img class="experience_photo" src="assets/img/experience/sap.jpg" alt=""> 
+                                <p>Resolving software and application issues for over 400 people.
+                                    Overhauled the bookkeeping system to formulaic spreadsheets,
+                                    saving 7.5 hours biweekly.
+                                </p>
                             </div>
                         </li>
                         <!--Siemens-->
@@ -214,10 +214,12 @@
                             <time class="exp-date"><span><b>May '21 - Aug '21</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
                             <div class="exp-card">
-                                <h4><strong>Siemens Digital Industries Software</strong> | <em>Software Engineer</em></h4>
-                                <p>Sample Text</p>
+                                <h4><strong>Siemens Digital Industries Software</strong> | <em>Software Engineer Intern</em></h4>
+                                <p>An ML / AI focused role. Utilized TensorFlow to classify sentences, ran tests for OpenAI API (ChatGPT),
+                                    and researched the What-If-Tool for Explainable AI.
+                                </p>
                                 <br>
-                                <img class="experience_photo" src="assets/img/experience/sap.jpg" alt=""> 
+                                <img class="image" src="images/siemens.jpg" alt="">
                             </div>
                         </li>
                         <!--New Garden-->
@@ -226,15 +228,57 @@
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
                             <div class="exp-card">
                                 <h4><strong>New Garden Chinese Restaurant</strong> | <em>Assistant (to the) Manager</em></h4>
-                                <p>Sample Text</p>
+                                <p>
+                                    Managed a staff team of 4 in food production and service for over 75 customers per day.
+                                    Responsible for the front of the house.
+                                </p>
                                 <br>
-                                <img class="experience_photo" src="assets/img/experience/sap.jpg" alt=""> 
+                                <img class="image" src="images/restaurant.jpg" alt="">
+                                <img class="image" src="images/menu.jpg" alt="">
                             </div>
                         </li>
                     </ul>
                 </div>
             </div>
-            <!--New Garden: Assistant (to the) Manager-->
+            <div class="row text-left align-items-center">
+                <div class="col">
+                    <ul class="exp-timeline">
+                        <li>
+                            <h3 class="exp-heading">
+                                <i class="fas fa-graduation-cap"></i>
+                                Education
+                            </h3>
+                        </li>
+                        <!--Penn State-->
+                        <li>
+                            <time class="exp-date"><span><b>Aug '18 - May '22</b></span></time>
+                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <div class="exp-card">
+                                <h4><strong>The Pennsylvania State University</strong></h4>
+                                <p>- Bachelor of Science in Computer Science
+                                    <br>- 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+ participants)
+                                    <br>- Leonhard Center Speaking Contest semi-finalist (Top 3%)
+                                </p>
+                                <br>
+                                <img class="image" src="images/grad.jpg" alt="">
+                            </div>
+                        </li>
+                        <!--GDSC-->
+                        <li>
+                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <div class="exp-card">
+                                <h4><strong>Google Developer Student Club</strong> | <em>Technical Lead</em></h4>
+                                <p>
+                                    Led a team of 5 in organizing biweekly workshops about GCP products.
+                                    Also provided year-long mentorship to members participating in the Google Solutions Challenge.
+                                </p>
+                                <br>
+                                <img class="image" src="images/gdsc.jpg" alt=""> 
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
