--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-
+    
+    <link rel="stylesheet" href="assets/css/minimal.css">
     <script src="assets/js/pace.min.js"></script>
 
     <!-- Google tag (gtag.js) -->
