--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <link rel="stylesheet" href="assets/css/minimal.css">
     <script src="assets/js/pace.min.js"></script>
 
@@ -91,10 +92,10 @@
                 </div>
             </div>
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
                     <img class="w-100 image" src="images/about.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <p><strong>Hello there!</strong> 
                         I'm Johnny and I tend to find myself in interesting situations. 
                         I love going on adventures and creating stories. 
@@ -134,7 +135,7 @@
                 </div>
             </div>
             <div class="row text-left align-items-center">
-                <div class="col-sm-6">
+                <div class="col-sm-6" data-aos="fade-right" data-aos-once="true">
                     <p>
                         <i class="value-icon fas fa-lightbulb"></i>
                         <strong>Innovate</strong>
@@ -152,7 +153,7 @@
                         I believe that the greatest growth comes from overcoming obstacles.
                     </p>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6" data-aos="fade-left" data-aos-once="true">
                     <p>
                         <i class="value-icon fas fa-users"></i>
                         <strong>Collaborate</strong>
@@ -200,9 +201,9 @@
                         </li>
                         <!--An Kang-->
                         <li>
-                            <time class="exp-date"><span><b>May '22 - Present</b></span></time>
+                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>May '22 - Present</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card">
+                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
                                 <h4><strong>An Kang Social Day Care</strong> | <em>Computer Technician</em></h4>
                                 <p>Resolving software and application issues for over 400 people.
                                     Overhauled the bookkeeping system to formulaic spreadsheets,
@@ -212,9 +213,9 @@
                         </li>
                         <!--Siemens-->
                         <li>
-                            <time class="exp-date"><span><b>May '21 - Aug '21</b></span></time>
+                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>May '21 - Aug '21</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card">
+                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
                                 <h4><strong>Siemens Digital Industries Software</strong> | <em>Software Engineer Intern</em></h4>
                                 <p>An ML / AI focused role. Utilized TensorFlow to classify sentences, ran tests for OpenAI API (ChatGPT),
                                     and researched the What-If-Tool for Explainable AI.
@@ -225,9 +226,9 @@
                         </li>
                         <!--New Garden-->
                         <li>
-                            <time class="exp-date"><span><b>Jun '18 - May '21</b></span></time>
+                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>Jun '18 - May '21</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card">
+                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
                                 <h4><strong>New Garden Chinese Restaurant</strong> | <em>Assistant (to the) Manager</em></h4>
                                 <p>
                                     Managed a staff team of 4 in food production and service for over 75 customers per day.
@@ -252,9 +253,9 @@
                         </li>
                         <!--Penn State-->
                         <li>
-                            <time class="exp-date"><span><b>Aug '18 - May '22</b></span></time>
+                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>Aug '18 - May '22</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card">
+                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
                                 <h4><strong>The Pennsylvania State University</strong></h4>
                                 <p>- Bachelor of Science in Computer Science
                                     <br>- 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+ participants)
@@ -267,7 +268,7 @@
                         <!--GDSC-->
                         <li>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card">
+                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
                                 <h4><strong>Google Developer Student Club</strong> | <em>Technical Lead</em></h4>
                                 <p>
                                     Led a team of 5 in organizing biweekly workshops about GCP products.
@@ -303,10 +304,10 @@
             </div>
             <!--New Garden-->
             <div class="row text-left align-items-stretch">
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
                     <img class="img-fluid h-100" src="images/newgarden.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <div class="proj-title">New Garden</div>
                     <div class="proj-desc">Restaurant Point of Sale System</div>
                     <p>
@@ -323,10 +324,10 @@
             <br>
             <!--Loot Council-->
             <div class="row text-left align-items-stretch">
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
                     <img class="img-fluid h-100" src="images/lootcouncil.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <div class="proj-title">Loot Council</div>
                     <div class="proj-desc">Web Scraper & Reward Allocator</div>
                     <p>
@@ -343,10 +344,10 @@
             <br>
             <!--Romantic Hut-->
             <div class="row text-left align-items-stretch">
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
                     <img class="img-fluid h-100" src="images/romantichut.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <div class="proj-title">Romantic Hut</div>
                     <div class="proj-desc">Local Business Website</div>
                     <p>
@@ -397,6 +398,10 @@
     </footer>
 
 </body>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="assets/js/app.js"></script>
     <script src="https://kit.fontawesome.com/a8eb5cb089.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
