--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
-    <link rel="stylesheet" href="assets/css/minimal.css">
+    <link rel="stylesheet" href="assets/css/minimal.css"/>
     <script src="assets/js/pace.min.js"></script>
 
     <!-- Google tag (gtag.js) -->
@@ -26,6 +25,9 @@
 
 </head>
 <body>
+    <!--Preloader-->
+    <div id="overlay"></div>
+
     <!--Navbar Section-->
     <div id="top"></div>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #131313;">
@@ -396,8 +398,17 @@
           </div>
         </div>
     </footer>
-
-</body>
+    <script>
+        Pace.on('done', function() {
+            var overlay = document.getElementById('overlay');
+            if (overlay) {
+                overlay.style.display = 'none';     // Remove preloader
+                document.body.style.overflow = '';  // Re-enable scrolling
+            }
+        });
+        // Disable scrolling until Pace is done loading
+        document.body.style.overflow = 'hidden';
+    </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
@@ -407,4 +418,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
     crossorigin="anonymous"></script>
+</body>
 </html>
