--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <div class="container d-flex flex-column align-items-center justify-content-center h-100">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1>Johnny Jiang</h1>
-                    <h2>Software Engineer</h2>
+                    <h1 data-aos="fade-down" data-aos-once="true" data-aos-delay="500">Johnny Jiang</h1>
+                    <h2 data-aos="fade-in" data-aos-once="true" data-aos-delay="1000">Software Engineer</h2>
                 </div>
             </div>
-            <div class="row text-center align-items-center">
+            <div class="row text-center align-items-center" data-aos="zoom-in" data-aos-once="true" data-aos-delay="1500">
                 <div class="col social-icons">
                     <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" proj-title="LinkedIn Profile" class="icon-button linkedin">
                         <i class="icon-linkedin fa fa-linkedin"></i>
