Changed values content

--- a/index.html
+++ b/index.html
@@ -141,17 +141,14 @@
                     <p>
                         <i class="value-icon fas fa-lightbulb"></i>
                         <strong>Innovate</strong>
-                        <br>Innovation is my driving force. 
-                        I am dedicated to pushing boundaries and 
-                        finding inventive solutions to challenges. 
+                        <br>I am dedicated to pushing boundaries and finding inventive solutions. 
                         I view every problem as a chance to craft something groundbreaking.
                     </p>
                     <br>
                     <p>
                         <i class="value-icon fas fa-rocket"></i>
                         <strong>Challenge</strong>
-                        <br>I am a passionate advocate for pushing my limits. 
-                        Challenges invigorate me and fuel my desire to conquer new heights. 
+                        <br>Challenges invigorate me and fuel my desire to conquer new heights. 
                         I believe that the greatest growth comes from overcoming obstacles.
                     </p>
                 </div>
@@ -159,18 +156,15 @@
                     <p>
                         <i class="value-icon fas fa-users"></i>
                         <strong>Collaborate</strong>
-                        <br>Collaboration is at the heart of my approach. 
-                        I embrace the chance to team up with diverse minds, 
+                        <br>I embrace the chance to team up with diverse minds, 
                         merging our ideas to create something greater than ourselves.
                     </p>
                     <br>
                     <p>
                         <i class="value-icon fas fa-heart"></i>
                         <strong>Impact</strong>
-                        <br>Impact is my ultimate goal. 
-                        I channel my efforts into projects 
-                        that create meaningful change and 
-                        leave a positive mark on the world around me.
+                        <br>I channel my efforts into projects hat create 
+                        meaningful change and leave a positive mark on the world around me.
                     </p>
                 </div>
             </div>
@@ -238,7 +232,6 @@
                                 </p>
                                 <br>
                                 <img class="image" src="images/restaurant.jpg" alt="">
-                                <img class="image" src="images/menu.jpg" alt="">
                             </div>
                         </li>
                     </ul>
