--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Johnny Jiang</title>
 
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2"  />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -30,7 +30,7 @@
 
     <!--Navbar Section-->
     <div id="top"></div>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #131313;">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand nav-link" onclick="toggleNavbar('top')">JOHNNY JIANG</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,11 +61,11 @@
         <div class="container d-flex flex-column align-items-center justify-content-center h-100">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1 data-aos="fade-down" data-aos-once="true" data-aos-delay="500">Johnny Jiang</h1>
-                    <h2 data-aos="fade-in" data-aos-once="true" data-aos-delay="1000">Software Engineer</h2>
+                    <h1>Johnny Jiang</h1>
+                    <h2>Software Engineer</h2>
                 </div>
             </div>
-            <div class="row text-center align-items-center" data-aos="zoom-in" data-aos-once="true" data-aos-delay="1500">
+            <div class="row text-center align-items-center">
                 <div class="col social-icons">
                     <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" proj-title="LinkedIn Profile" class="icon-button linkedin">
                         <i class="icon-linkedin fa fa-linkedin"></i>
@@ -411,5 +411,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
     crossorigin="anonymous"></script>
+
+    <script>
+        window.addEventListener("scroll", function() {
+            const aboutSection = document.getElementById("about");
+            const navbar = document.querySelector(".navbar");
+
+            if (window.scrollY > aboutSection.offsetTop-66) {
+                navbar.classList.add("solid-navbar");
+                navbar.classList.remove("transparent-navbar");
+            } else {
+                navbar.classList.remove("solid-navbar");
+                navbar.classList.add("transparent-navbar");
+            }
+        });
+    </script>
+</body>
+
 </body>
 </html>
